--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=arffads
 DB_PASSWORD=Arif196
 DB_DATABASE=puskesmas
+
+# Railway Environment
+PGDATABASE=railway
+PGHOST=containers-us-west-72.railway.app
+PGPASSWORD=qMJoalAVmF3rjNnJL01i
+PGPORT=7222
+PGUSER=postgres
+DATABASE_URL="postgresql://postgres:qMJoalAVmF3rjNnJL01i@containers-us-west-72.railway.app:7222/railway"
